--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 [database]
-uri = "mongodb+srv://jamesfitze007_db_user:jwwH5fRMBKM481WK@judging-app-cluster.snhtcji.mongodb.net/?appName=Judging-app-cluster"
-name = "judging_app"
+uri = "mongodb+srv://brunildaxhaferllari_db_user:6994daa71ea9462b22a51b52@cluster0.jo4z9tr.mongodb.net/?appName=Cluster0"
+name = "judge_db"
