--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 [database]
-uri = "mongodb+srv://brunildaxhaferllari_db_user:6994daa71ea9462b22a51b52@cluster0.jo4z9tr.mongodb.net/?appName=Cluster0"
-name = "judge_db"
+uri = "mongodb+srv://BX_db_user:YruQALK2T3FYeF89@clusterdb.zm8ntul.mongodb.net/?appName=Clusterdb"
+name = "Judging26"
