--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 [database]
 uri = "mongodb+srv://BX_db_user:YruQALK2T3FYeF89@clusterdb.zm8ntul.mongodb.net/?appName=Clusterdb"
-name = "Judging26"
+name = "Clusterdb"
